@@ -1,5 +1,10 @@
 2001-03-18  Gary Houston  <ghouston@arglist.com>
 
+	* posix.c (scm_tmpnam): check that return value from tmpnam is not
+	NULL.  rewrote the docstring.
+	(scm_mkstemp): new procedure implementing "mkstemp!".
+	* posix.h: declare scm_mkstemp.
+
 	* net_db.c: declare h_errno if configure didn't define HAVE_H_ERRNO.
 	normally it would be found in netdb.h.
 
